Status Image travis

--- a/README.rdoc
+++ b/README.rdoc
@@ -1,3 +1,6 @@
+### Status
+[![Build Status](https://travis-ci.org/sidlinux22/ToDoAPP.svg?branch=master)](https://travis-ci.org/sidlinux22/ToDoAPP)
+
 == README
 
 This README would normally document whatever steps are necessary to get the
